<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_normal"
            android:title="@string/nav_item_home" />
        <item
            android:id="@+id/nav_plans"
            android:icon="@drawable/ic_plans_normal"
            android:title="@string/nav_item_plans" />
        <item
            android:id="@+id/nav_team"
            android:icon="@drawable/ic_team"
            android:title="@string/nav_item_team" />
        <item
            android:id="@+id/nav_resources"
            android:icon="@drawable/ic_resources"
            android:title="@string/nav_item_resources" />
        <item
            android:id="@+id/nav_governance"
            android:icon="@drawable/ic_governance"
            android:title="@string/nav_item_governance" />
        <item
            android:id="@+id/nav_glossary"
            android:icon="@drawable/ic_glossary"
            android:title="@string/nav_item_glossary" />
    </group>

    <group
        android:id="@+id/group_2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_feedback"
            android:title="@string/nav_item_feedback" />
    </group>


</menu>
