<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="24dp">

    <TextView
        android:id="@+id/txt_dialog_process_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/dialog_process_label_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbl_dialog_process_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="4dp"
        android:text="@string/dialog_process_label_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dialog_process_detail" />

    <TextView
        android:id="@+id/txt_dialog_process_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_process_value_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toRightOf="@+id/lbl_dialog_process_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dialog_process_detail" />

    <TextView
        android:id="@+id/lbl_dialog_process_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="4dp"
        android:text="@string/dialog_process_label_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_dialog_process_name" />

    <TextView
        android:id="@+id/txt_dialog_process_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_process_value_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toRightOf="@+id/lbl_dialog_process_description"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dialog_process_name" />

    <TextView
        android:id="@+id/lbl_dialog_process_critical_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="4dp"
        android:text="@string/dialog_process_label_critical_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_dialog_process_description" />

    <TextView
        android:id="@+id/txt_dialog_process_critical_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_process_value_critical_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toRightOf="@+id/lbl_dialog_process_critical_time"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dialog_process_description" />

    <TextView
        android:id="@+id/lbl_dialog_process_sop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="4dp"
        android:text="@string/dialog_process_label_sop"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_dialog_process_critical_time" />

    <TextView
        android:id="@+id/txt_dialog_process_sop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_process_value_sop"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toRightOf="@+id/lbl_dialog_process_sop"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dialog_process_critical_time" />

    <TextView
        android:id="@+id/lbl_dialog_process_sla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="4dp"
        android:text="@string/dialog_process_label_sla"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_dialog_process_sop" />

    <TextView
        android:id="@+id/txt_dialog_process_sla"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_process_value_sla"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toRightOf="@+id/lbl_dialog_process_sla"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dialog_process_sop" />

    <TextView
        android:id="@+id/lbl_dialog_process_rto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="4dp"
        android:text="@string/dialog_process_label_rto"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_dialog_process_sla" />

    <TextView
        android:id="@+id/txt_dialog_process_rto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_process_value_rto"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toRightOf="@+id/lbl_dialog_process_rto"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dialog_process_sla" />

    <TextView
        android:id="@+id/lbl_dialog_process_mbco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="4dp"
        android:text="@string/dialog_process_label_mbco"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_dialog_process_rto" />

    <TextView
        android:id="@+id/txt_dialog_process_mbco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_process_value_mbco"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toRightOf="@+id/lbl_dialog_process_mbco"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dialog_process_rto" />

    <TextView
        android:id="@+id/lbl_dialog_process_ops_impact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="4dp"
        android:text="@string/dialog_process_label_operational_impact"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_dialog_process_mbco" />

    <TextView
        android:id="@+id/txt_dialog_process_ops_impact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_process_value_operational_impact"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toRightOf="@+id/lbl_dialog_process_ops_impact"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dialog_process_mbco" />

    <TextView
        android:id="@+id/lbl_dialog_process_fin_impact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="4dp"
        android:text="@string/dialog_process_label_financial_impact"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_dialog_process_ops_impact" />

    <TextView
        android:id="@+id/txt_dialog_process_fin_impact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_process_value_financial_impact"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toRightOf="@+id/lbl_dialog_process_fin_impact"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dialog_process_ops_impact" />

    <TextView
        android:id="@+id/lbl_dialog_process_staff_comp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="4dp"
        android:text="@string/dialog_process_label_staff_compliment"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_dialog_process_fin_impact" />

    <TextView
        android:id="@+id/txt_dialog_process_staff_comp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_process_value_staff_compliment"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toRightOf="@+id/lbl_dialog_process_staff_comp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dialog_process_fin_impact" />

    <TextView
        android:id="@+id/lbl_dialog_process_staff_comp_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="4dp"
        android:text="@string/dialog_process_label_staff_comp_desc"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_dialog_process_staff_comp" />

    <TextView
        android:id="@+id/txt_dialog_process_staff_comp_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_process_value_staff_comp_desc"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toRightOf="@+id/lbl_dialog_process_staff_comp_desc"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dialog_process_staff_comp" />

    <TextView
        android:id="@+id/lbl_dialog_process_revised_ops_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="4dp"
        android:text="@string/dialog_process_label_revised_ops_level"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_dialog_process_staff_comp_desc" />

    <TextView
        android:id="@+id/txt_dialog_process_revised_ops_level"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_process_value_revised_ops_level"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toRightOf="@+id/lbl_dialog_process_revised_ops_level"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dialog_process_staff_comp_desc" />

    <TextView
        android:id="@+id/lbl_dialog_process_remote_working"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="4dp"
        android:text="@string/dialog_process_label_remote_working"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dialog_process_revised_ops_level" />

    <TextView
        android:id="@+id/txt_dialog_process_remote_working"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_process_value_remote_working"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toRightOf="@+id/lbl_dialog_process_remote_working"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dialog_process_revised_ops_level" />

    <TextView
        android:id="@+id/lbl_dialog_process_site_dependent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="4dp"
        android:text="@string/dialog_process_label_site_dependent"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_dialog_process_remote_working" />

    <TextView
        android:id="@+id/txt_dialog_process_site_dependent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_process_value_site_dependent"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toRightOf="@+id/lbl_dialog_process_site_dependent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dialog_process_remote_working" />

</android.support.constraint.ConstraintLayout>