<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="2dp"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_plan_name"
            style="@style/cardTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:text="@string/plan_name" />

        <TextView
            android:id="@+id/txt_plan_department"
            style="@style/cardSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_plan_name"
            android:text="@string/plan_department" />

        <ImageView
            android:id="@+id/img_plan_type"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/txt_plan_department"
            android:layout_gravity="center"
            android:contentDescription="@string/plan_image"
            android:scaleType="fitXY"
            card_view:srcCompat="@drawable/img_bcp" />

        <TextView
            android:id="@+id/txt_plan_description"
            style="@style/cardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_plan_type"
            android:text="@string/plan_description" />

        <Button
            android:id="@+id/btn_plan_view"
            style="@style/cardAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_plan_description"
            android:background="@color/colorTransparent"
            android:text="@string/plan_action_view" />

        <Button
            android:id="@+id/btn_plan_share"
            style="@style/cardAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_plan_description"
            android:layout_toEndOf="@+id/btn_plan_view"
            android:background="@color/colorTransparent"
            android:text="@string/plan_action_share" />

    </RelativeLayout>
</android.support.v7.widget.CardView>